--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@azure/msal-node": "^5.0.5",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.8",
@@ -18,6 +19,7 @@
     "@supabase/supabase-js": "^2.47.0",
     "@tanstack/react-table": "^8.21.3",
     "date-fns": "^4.1.0",
+    "dynamics-web-api": "^2.4.0",
     "next": "16.1.6",
     "papaparse": "^5.5.3",
     "react": "19.2.3",
